Added forgotPasswordUsernameInput screen; styling finished

--- a/frontend/css/forgotPasswordUsernameInput.css
+++ b/frontend/css/forgotPasswordUsernameInput.css
@@ -1,10 +1,15 @@
+div.form {
+    position: relative;
+    top: 20%;
+}
+
 form {
+    position: relative;
     width: 50%;
     margin: 0 auto;
 }
 
 fieldset {
-    position: relative;
     background-color: white;
     border: 2px solid DarkGrey;
     border-radius: 5px;
@@ -31,35 +36,9 @@ div.textbox {
     margin-bottom: 1em;
 }
 
-div.dropdowns {
-    margin-bottom: 1em;
-}
-
-span.alert {
-    position: absolute;
-    right: 0;
-    font-size: 75%;
-    color: red;
-    font-style: italic;
-    display: none;
-}
-
 input[type="text"],input[type="password"] {
     box-sizing: border-box;
     width: 100%;
-}
-
-select {
-    width: 30%;
-}
-
-div.securityquestions {
-    margin-bottom: 0.5em;
-}
-
-div.securityquestions select {
-    width: 100%;
-    margin-bottom: 0.2em;
 }
 
 div.buttons {
@@ -89,4 +68,3 @@ input[type="submit"]:hover {
     background-color: hsl(0, 0%, 15%);
     border: 1px solid black;
 }
-
