--- a/frontend/css/page_layout.css
+++ b/frontend/css/page_layout.css
@@ -17,6 +17,27 @@ header {
     width: 100%;
     height: 7.5%;
 }
+nav {
+    position: absolute;
+    right: 0;
+    top: 3.25%;
+    color: white;
+    font-size: 100%;
+    font-weight: lighter;
+    font-family: Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+}
+
+nav>a {
+    float: right;
+    color: inherit;
+    margin-right: 2em;
+    text-decoration: none;
+}
+
+nav>a:hover {
+    color: LightGrey;
+}
 
 #page {
     position: relative;
