Added site-wide logo-banner

--- a/src/main/resources/public/css/page_layout.css
+++ b/src/main/resources/public/css/page_layout.css
@@ -10,6 +10,10 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
+header>img {
+    height: 100%;
+}
+
 header {
     background-color: Black;
     color: white;
