--- a/src/main/resources/public/css/page_layout.css
+++ b/src/main/resources/public/css/page_layout.css
@@ -10,30 +10,36 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
-header>img {
-    height: 100%;
-}
-
 header {
+    position: relative;
     background-color: Black;
     color: white;
     text-align: center;
     width: 100%;
-    height: 7.5%;
+    height: 50px;
 }
+
+header>img {
+    position: relative;
+    width: 27%;
+    margin: 0 auto;
+    z-index: 1;
+}
+
 nav {
-    position: absolute;
-    right: 0;
-    top: 3.25%;
+    position: relative;
+    top: -4%;
+    background-color: black;
     color: white;
     font-size: 100%;
+    text-align: right;
     font-weight: lighter;
     font-family: Helvetica, Arial, sans-serif;
     text-transform: uppercase;
+    z-index: 0;
 }
 
 nav>a {
-    float: right;
     color: inherit;
     margin-right: 2em;
     text-decoration: none;
@@ -45,7 +51,8 @@ nav>a:hover {
 
 #page {
     position: relative;
-    width: 960px;
+    max-width: 960px;
+    min-width: 10%;
     height: 100%;
     margin: 0 auto;
 }
