More changes to the myProfile

--- a/src/main/resources/public/css/myProfile.css
+++ b/src/main/resources/public/css/myProfile.css
@@ -56,3 +56,12 @@ button:hover {
     height: 100px;
     display: none;
 }
+
+#savebutton {
+    display: none;
+}
+
+#cancelbutton {
+    display: none;
+    background-color: DarkSlateGrey;
+}
