--- a/src/main/resources/public/css/admin_layout.css
+++ b/src/main/resources/public/css/admin_layout.css
@@ -1,6 +1,3 @@
-body {
-    bottom:0%;
-}
 div.bodyDiv {
     position: relative;
     width: 650px;
@@ -11,7 +8,7 @@ div.post {
     position: relative;
     top: 5%;
     height: 200px;
-    width: 644px;
+    width: 75%;
     margin: auto;
     margin-bottom: 10px;
     border: 3px solid black;
