Fixed the navbar on each of the pages to show up in the correct order

--- a/src/main/resources/public/css/postView.css
+++ b/src/main/resources/public/css/postView.css
@@ -1,10 +1,9 @@
 #postandreplies {
     background-color: hsl(0,0%,80%);
-    border-width: 0 2px;
+    border-width: 2px;
     border-style: ridge;
     border-color: black;
     padding: 1em;
-    border-bottom: 2px ridge black;
 }
 
 #post {
