--- a/src/main/resources/public/css/page_layout.css
+++ b/src/main/resources/public/css/page_layout.css
@@ -36,6 +36,7 @@ nav {
     font-weight: lighter;
     font-family: Helvetica, Arial, sans-serif;
     text-transform: uppercase;
+    margin-bottom: 0px;
     z-index: 0;
 }
 
