--- a/src/main/resources/public/css/admin_layout.css
+++ b/src/main/resources/public/css/admin_layout.css
@@ -1,6 +1,6 @@
 div.bodyDiv {
     position: relative;
-    width: 650px;
+    width: 100%;
     margin: auto;
 }
 
@@ -45,7 +45,7 @@ div.post>form>div.submitButton>button {
 }
 
 div.userList {
-    width: 220px;
+    width: 27.5%;
     height: 500px;
     border: 3px solid black;
     float: left;
@@ -61,7 +61,7 @@ div.userList>form>input {
 }
 
 div.postsList {
-    width: 410px;
+    width: 67.5%;
     height: 500px;
     border: 3px solid black;
     float: right;
